@@ -42,12 +42,9 @@ void KThread::run()
         iface->call("clean_by_second_one_key", list);
     }
     else if(method_name == "clean_history_records") {
-        qDebug() << "11111111";
-//        qDebug() << list;
         iface->call("clean_history_records");
     }
     else if(method_name == "clean_system_history") {
-        qDebug() << "2222222222";
         iface->call("clean_system_history");
     }
     else if(method_name == "clean_cookies_records") {
